# rain-assistant

./: .dockerignore  .gitignore  .mcp.json  AUDIT_RAIN_VS_OPENCLAW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FLUTTER_PENDING_FEATURES.md  FLUTTER_SPEC.md  LICENSE  MANIFEST.in  MVP_TASKS.md  PLAN_COMPUTER_USE.md  README.md  SECURITY_FIXES.md  SECURITY_TODO_PER_USER_ISOLATION.md  _test_port.py  build.bat  build.sh  claude_client.py  computer_use.py  computer_use_recorder.py  computer_use_safety.py  computer_use_vision.py  database.py  docker-compose.yml  install.ps1  install.sh  key_manager.py  landing.html  logging_config.py  main.py  metrics.py  permission_classifier.py  prompt_composer.py  pyproject.toml  rate_limiter.py  recorder.py  (+12 more)
.claude/skills/chatgpt-design/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sync-installers.yml
a2ui/: __init__.py  meta_tool.py  schema.py
alter_egos/: __init__.py  meta_tool.py  storage.py
audit/: __init__.py  logger.py  storage.py
directors/: __init__.py  builtin.py  executor.py  inbox.py  meta_tool.py  projects_tool.py  storage.py  task_queue.py
docs/: AGENT_OS_ROADMAP.md  COMPUTER_USE_ROADMAP.md  OPEN_CORE_PLAN.md  PROJECT_STATUS.md  RAG_ROADMAP.md  README_PUBLIC.md  RELEASE_GUIDE.md  RESTRUCTURE_GUIDE.md
documents/: __init__.py  chunker.py  meta_tool.py  parser.py  query.py  storage.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: sw.js
frontend/scripts/: deploy.mjs
frontend/src/__tests__/: api.test.ts  translations.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DrawerOverlay.tsx  EgoSwitcher.tsx  EmptyState.tsx  ErrorBoundary.tsx  HistorySidebar.tsx  McpToolsSection.tsx  MobileBottomNav.tsx  ModelSwitcher.tsx  SecurityBanner.tsx  SidebarNav.tsx  Skeleton.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx
frontend/src/hooks/: useA2UIMessages.ts  useAudioRecorder.ts  useComputerUseMessages.ts  useDirectorMessages.ts  useHistory.ts  useNotifications.ts  usePermissionMessages.ts  usePopover.ts  useSubAgentMessages.ts  useTTS.ts  useToolMessages.ts  useTranslation.ts  useVoiceMessages.ts  useVoiceMode.ts  useWebSocket.ts
frontend/src/lib/: api.ts  constants.ts  device.ts  historyUtils.ts  translations.ts  types.ts
frontend/src/stores/: useAgentStore.ts  useConnectionStore.ts  useDirectorRunStore.ts  useHistoryStore.ts  useMetricsStore.ts  useRecorderStore.ts  useSettingsStore.ts  useToastStore.ts  useUIStore.ts
marketplace/: __init__.py  meta_tool.py  publisher.py  registry.py
marketplace/plugins/: json_formatter.yaml  system_info.yaml  translator.yaml  url_shortener.yaml  weather.yaml
memories/: __init__.py  embeddings.py  meta_tool.py  model_registry.py  storage.py
plugins/: __init__.py  converter.py  executor.py  loader.py  meta_tool.py  schema.py
policies/: __init__.py  engine.py  rules.py
providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
rain_assistant/: __init__.py  __main__.py
rain_flutter/: .gitignore  CHAT_RESILIENCE.md  PLAN_MULTI_USER_OAUTH.md  README.md  pubspec.yaml
rain_flutter/android/: key.properties.example
rain_flutter/android/app/: build.gradle.kts
rain_flutter/ios/Runner/: AppDelegate.swift  Info.plist
rain_flutter/ios/Runner.xcodeproj/: project.pbxproj
rain_flutter/lib/: main.dart
rain_flutter/lib/app/: l10n.dart  theme.dart
rain_flutter/lib/models/: a2ui.dart  agent.dart  auth.dart  conversation.dart  director.dart  message.dart  metrics.dart  provider_info.dart  rate_limits.dart  subagent_info.dart
rain_flutter/lib/providers/: agent_provider.dart  audio_provider.dart  call_provider.dart  connection_provider.dart  directors_provider.dart  metrics_provider.dart  notification_provider.dart  settings_provider.dart
rain_flutter/lib/screens/: alter_egos_screen.dart  api_key_screen.dart  chat_screen.dart  director_detail_screen.dart  directors_screen.dart  file_browser_screen.dart  history_screen.dart  inbox_screen.dart  marketplace_screen.dart  memories_screen.dart  metrics_screen.dart  pin_screen.dart  server_url_screen.dart  settings_screen.dart  team_setup_wizard_screen.dart
rain_flutter/lib/services/: audio_service.dart  (+9 more)
rain_flutter/test/: widget_test.dart
routes/: __init__.py  agents.py  auth.py  directors.py  file_parse.py  files.py  images.py  settings.py
sandbox/: __init__.py  manager.py
scheduled_tasks/: __init__.py  meta_tool.py  storage.py
static/: 404.html  __init__.py  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt
static/css/: styles.css
static/js/: app.js  auth.js  browser.js  chat.js  history.js  metrics.js  notifications.js  recorder.js  settings.js  tabs.js  theme.js  translations.js  websocket.js
subagents/: __init__.py  manager.py  meta_tool.py
tests/: conftest.py  test_alter_egos.py  test_audit.py  test_computer_use.py  test_database.py  test_directors.py  test_documents.py  test_mcp_degradation.py  test_memories.py  test_permission_classifier.py  test_plugins.py  test_policies.py  test_projects.py  test_prompt_composer.py  test_sandbox.py  test_server_api.py  test_server_auth.py  test_smoke_e2e.py  test_telegram_bot.py  test_tracing.py  test_websocket.py
tools/: __init__.py  bash_ops.py  browser_ops.py  definitions.py  executor.py  file_ops.py  search_ops.py
tracing/: __init__.py  storage.py  tracer.py
utils/: __init__.py  sanitize.py
voice/: __init__.py  talk_session.py  vad.py  wake_word.py
voice/models/: .gitkeep
(+113 files in other folders)
